search, all tabs at bottom

--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,7 @@
     <script src="js/ionic.tdcards.custom.js"></script>
 
   </head>
-  <body ng-app="starter">
+  <body ng-app="cortex">
     <ion-side-menus>
       <!-- Right menu -->
       <ion-side-menu side="right">
