--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,8 @@
     <script src="lib/collide/collide.js"></script>
     <script src="lib/tabletop/src/tabletop.js"></script>
     <script src="lib/angular-tabletop/TabletopProvider.js"></script>
+    <script src="lib/angular-holderjs/src/holder.js"></script>
+    <script src="lib/holderjs/holder.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
