dynamic content loading, my learning

--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,9 @@
     <script src="lib/angular-tabletop/TabletopProvider.js"></script>
     <script src="lib/angular-holderjs/src/holder.js"></script>
     <script src="lib/holderjs/holder.min.js"></script>
+    <script src="lib/moment/moment.js"></script>
+    <script src="lib/angular-moment/angular-moment.js"></script>
+    <script src="lib/lodash/dist/lodash.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -26,8 +29,11 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     <script src="js/directives.js"></script>
-    <script src="js/config_factory.js"></script>
-    <script src="js/config_controller.js"></script>
+    <script src="js/staticcontent_factory.js"></script>
+    <script src="js/staticcontent_controller.js"></script>
+    <script src="js/dynamiccontent_controller.js"></script>
+    <script src="js/courses_controller.js"></script>
+    <script src="js/utils_controller.js"></script>
     <script src="js/ionic.tdcards.custom.js"></script>
 
   </head>
