--- a/www/index.html
+++ b/www/index.html
@@ -32,7 +32,7 @@
     <script src="js/staticcontent_factory.js"></script>
     <script src="js/staticcontent_controller.js"></script>
     <script src="js/dynamiccontent_controller.js"></script>
-    <script src="js/courses_controller.js"></script>
+    <!-- <script src="js/courses_controller.js"></script> -->
     <script src="js/utils_controller.js"></script>
     <script src="js/ionic.tdcards.custom.js"></script>
 
