--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <meta http-equiv="Content-Security-Policy" content="default-src &apos;self&apos; &apos;unsafe-inline&apos; &apos;unsafe-eval&apos; data: http: spreadsheets.google.com *">
+
     <title></title>
 
 
