--- a/www/index.html
+++ b/www/index.html
@@ -10,11 +10,12 @@
 
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
+    <link href="lib/ion-alpha-scroll/src/ion-alpha-scroll.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="lib/ionic-ion-tinder-cards/ionic.tdcards.css"> -->
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-<script src="lib/ionic-platform-web-client/dist/ionic.io.bundle.min.js"></script>
+    <script src="lib/ionic-platform-web-client/dist/ionic.io.bundle.min.js"></script>
     <script src="lib/collide/collide.js"></script>
     <script src="lib/tabletop/src/tabletop.js"></script>
     <script src="lib/angular-tabletop/TabletopProvider.js"></script>
@@ -23,6 +24,8 @@
     <script src="lib/moment/moment.js"></script>
     <script src="lib/angular-moment/angular-moment.js"></script>
     <script src="lib/lodash/dist/lodash.min.js"></script>
+    <script src="lib/ion-alpha-scroll/src/ion-alpha-scroll.js"></script> 
+
 
     <!-- cordova script (this will be a 404 during development) -->
     <!-- Cordova is bootstrapped by ionic-platform-web-client, uncomment this if you remove ionic-platform-web-client... -->
