--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,7 @@
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/mediaquery.css" rel="stylesheet">
     <link href="css/style1.css" rel="stylesheet">
     <link href="css/style2.css" rel="stylesheet">
     <link href="css/style3.css" rel="stylesheet">
@@ -22,7 +23,7 @@
     <!-- <link rel="stylesheet" href="lib/ionic-ion-tinder-cards/ionic.tdcards.css"> -->
 
     <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <!--<script src="lib/ionic/js/ionic.bundle.js"></script>-->
     <!--<script src="lib/ionic/js/ionic.angular.min.js"></script>-->
   
 
@@ -69,6 +70,8 @@
     <!-- <script src="js/controllers/StaticContentController.js"></script> -->
     <!--<script src="js/controllers/staticcontent_controller.js"></script>-->
 
+    
+
     <script src="js/directive/ion-alpha-scroll.js"></script>
 
     <script type="text/javascript" src="./js/config/route.js"></script>
@@ -77,6 +80,8 @@
     <!-- all services js -->
     <script src="js/services.js"></script>
     
+
+
 </head>
 
 <body ng-app="cortexConfig" ng-controller="appCtrl">
