--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <meta http-equiv="Content-Security-Policy" content="default-src &apos;self&apos; &apos;unsafe-inline&apos; &apos;unsafe-eval&apos; data: http: spreadsheets.google.com *">
+    <meta name="format-detection" content="telephone=no">
 
     <title></title>
 
