--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,7 @@
     <script src="js/controllers/loginctrl.js"></script>
     <script src="js/controllers/dictionaryctrl.js"></script>
     <script src="js/Calendar.js"></script>
-    <script src="js/EmailComposer.js"></script>
+    <!-- <script src="js/EmailComposer.js"></script> -->
     <script src="js/controllers/discoverCtrl.js"></script>
     <script src="js/controllers/myLearningCtrl.js"></script>
     <script src="js/controllers/appLibraryCtrl.js"></script>
