--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,7 @@
     <script src="js/controllers/loginctrl.js"></script>
     <script src="js/controllers/dictionaryctrl.js"></script>
     <script src="js/Calendar.js"></script>
-    <script src="js/EmailComposer.js"></script>
+    <!-- <script src="js/EmailComposer.js"></script> -->
     <script src="js/controllers/discoverCtrl.js"></script>
     <script src="js/controllers/myLearningCtrl.js"></script>
     <script src="js/controllers/appLibraryCtrl.js"></script>
@@ -53,6 +53,16 @@
     <script type="text/javascript" src="./js/config/registry.js"></script>
     <!-- all services js -->
     <script src="js/services.js"></script>
+
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    </script>
+
 </head>
 
 <body ng-app="cortexConfig" ng-controller="appCtrl">
