--- a/www/index.html
+++ b/www/index.html
@@ -9,19 +9,14 @@
     <title></title>
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
-    <link href="css/mediaquery.css" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="lib/ionic-ion-tinder-cards/ionic.tdcards.css"> -->
-    <!-- ionic/angularjs js -->
-    <!--<script src="lib/ionic/js/ionic.bundle.js"></script>-->
-    <!--<script src="lib/ionic/js/ionic.angular.min.js"></script>-->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ionic-platform-web-client/dist/ionic.io.bundle.min.js"></script>
-    <!--<script src="lib/ionic-ratings/dist/ionic-ratings.min.js"></script>-->
     <script src="js/ionic-ratings.js"></script>
     <script src="lib/ionic-datepicker/dist/ionic-datepicker.bundle.min.js"></script>
     <!-- This is for google spreadsheet. -->
     <script src="lib/collide/collide.js"></script>
+    <!-- Tinder cards -->
+    <script src="js/custom-ionic.tdcards.js"></script>
     <script src="lib/tabletop/src/tabletop.js"></script>
     <script src="lib/holderjs/holder.min.js"></script>
     <script src="lib/moment/moment.js"></script>
@@ -30,39 +25,37 @@
     <script src="lib/angular-moment/angular-moment.js"></script>
     <script src="lib/angular-tabletop/TabletopProvider.js"></script>
     <script src="lib/angular-holderjs/src/holder.js"></script>
-    <!-- cordova script (this will be a 404 during development) -->
-    <!-- Cordova is bootstrapped by ionic-platform-web-client, uncomment this if you remove ionic-platform-web-client... -->
-    <!-- <script src="cordova.js"></script> -->
-    <!-- your app's js -->
-    <script src="js/appctrl.js"></script>
-    <script src="js/controllers/loginctrl.js"></script>
-    <script src="js/controllers/dictionaryctrl.js"></script>
+    <script src="js/appCtrl.js"></script>
     <script src="js/Calendar.js"></script>
-    <!-- <script src="js/EmailComposer.js"></script> -->
+    <script src="js/factory/services.js"></script>
+    <script src="js/factory/staticContentServices.js"></script>
+    <script src="js/controllers/loginCtrl.js"></script>
+    <script src="js/controllers/introCtrl.js"></script>
+    <script src="js/controllers/dictionaryCtrl.js"></script>
     <script src="js/controllers/discoverCtrl.js"></script>
+    <script src="js/controllers/searchResultsCtrl.js"></script>
+    <script src="js/controllers/discoverEventCtrl.js"></script>
     <script src="js/controllers/myLearningCtrl.js"></script>
     <script src="js/controllers/appLibraryCtrl.js"></script>
     <script src="js/controllers/techtipsCtrl.js"></script>
-    <script src="js/controllers/techtipsCtrlTitle.js"></script>
+    <script src="js/controllers/techtipsContentCtrl.js"></script>
     <script src="js/controllers/resourceCtrl.js"></script>
-    <script src="js/staticContentServices.js"></script>
-    <!-- <script src="js/controllers/StaticContentController.js"></script> -->
-    <!--<script src="js/controllers/staticcontent_controller.js"></script>-->
     <script src="js/directive/ion-alpha-scroll.js"></script>
     <script type="text/javascript" src="./js/config/route.js"></script>
     <script type="text/javascript" src="./js/config/registry.js"></script>
-    <!-- all services js -->
-    <script src="js/services.js"></script>
-
     <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
     </script>
-
 </head>
 
 <body ng-app="cortexConfig" ng-controller="appCtrl">
