--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
     <title></title>
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/ionic/js/ionic.bundle.min.js"></script>
     <script src="lib/ionic-platform-web-client/dist/ionic.io.bundle.min.js"></script>
     <script src="js/ionic-ratings.js"></script>
 	<script src="js/autofocus.min.js"></script>
@@ -20,10 +20,10 @@
     <script src="js/custom-ionic.tdcards.js"></script>
     <script src="lib/tabletop/src/tabletop.js"></script>
     <script src="lib/holderjs/holder.min.js"></script>
-    <script src="lib/moment/moment.js"></script>
-    <script src="lib/lodash/dist/lodash.js"></script>
+    <script src="lib/moment/min/moment.min.js"></script>
+    <script src="lib/lodash/dist/lodash.min.js"></script>
     <script src="lib/ngstorage/ngStorage.min.js"></script>
-    <script src="lib/angular-moment/angular-moment.js"></script>
+    <script src="lib/angular-moment/angular-moment.min.js"></script>
     <script src="lib/angular-tabletop/TabletopProvider.js"></script>
     <script src="lib/angular-holderjs/src/holder.js"></script>
     <script src="js/appCtrl.js"></script>
